--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "react-awesome-button": "^7.0.5",
     "react-dom": "^18.2.0",
     "react-icons": "^4.10.1",
-    "react-modal": "^3.16.1"
+    "react-modal": "^3.16.1",
+    "react-spring": "^9.7.2"
   },
   "devDependencies": {
     "@types/react": "^18.0.28",
