--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@fortawesome/free-brands-svg-icons": "^6.4.0",
     "@fortawesome/free-solid-svg-icons": "^6.4.0",
     "@fortawesome/react-fontawesome": "^0.2.0",
+    "@google-cloud/translate": "^7.2.2",
     "firebase": "^10.1.0",
     "react": "^18.2.0",
     "react-awesome-button": "^7.0.5",
