--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
     "react-dom": "^18.2.0",
     "react-icons": "^4.10.1",
     "react-modal": "^3.16.1",
+    "react-responsive": "^9.0.2",
+    "react-router-dom": "^6.14.2",
     "react-scroll": "^1.8.9",
     "react-spring": "^9.7.2",
     "react-transition-group": "^4.4.5"
