--- a/firebase.json
+++ b/firebase.json
@@ -1,7 +1,11 @@
 {
   "hosting": {
-    "public": "dist",
-    "ignore": [],
+    "public": "y",
+    "ignore": [
+      "firebase.json",
+      "**/.*",
+      "**/node_modules/**"
+    ],
     "rewrites": [
       {
         "source": "**",
