navbar,collage,slider updated. new images added

--- a/.firebaserc
+++ b/.firebaserc
@@ -1,8 +1,5 @@
 {
   "projects": {
-    "default": "dpinflatables-e6c0e",
-    "dsa": "dpinflatables-e6c0e"
-  },
-  "targets": {},
-  "etags": {}
+    "default": "dpinflatables-e6c0e"
+  }
 }
