--- a/package.json
+++ b/package.json
@@ -23,8 +23,10 @@
     "react-responsive": "^9.0.2",
     "react-router-dom": "^6.14.2",
     "react-scroll": "^1.8.9",
+    "react-slick": "^0.29.0",
     "react-spring": "^9.7.2",
-    "react-transition-group": "^4.4.5"
+    "react-transition-group": "^4.4.5",
+    "slick-carousel": "^1.8.1"
   },
   "devDependencies": {
     "@types/react": "^18.0.28",
