--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@fortawesome/react-fontawesome": "^0.2.0",
     "@google-cloud/translate": "^7.2.2",
     "firebase": "^10.1.0",
+    "framer-motion": "^10.16.2",
     "react": "^18.2.0",
     "react-awesome-button": "^7.0.5",
     "react-dom": "^18.2.0",
@@ -23,6 +24,7 @@
     "react-responsive": "^9.0.2",
     "react-router-dom": "^6.14.2",
     "react-scroll": "^1.8.9",
+    "react-scrollama": "^2.3.2",
     "react-slick": "^0.29.0",
     "react-spring": "^9.7.2",
     "react-transition-group": "^4.4.5",
